--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,15 +1,6 @@
 name: Release Charts
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - "charts/**/values.yaml"
-      - "charts/**/README.md" # ensure section exists; regen when touched
-      - ".github/workflows/release.yaml"
-      - "charts/**/Chart.yaml"
-  # Adjust if your chart lives elsewhere
+on: workflow_dispatch
 env:
   CHART_DIR: charts/crowdsec
 
@@ -45,8 +36,6 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: "chore(charts): regenerate README.md"
-          branch: main
-
   release:
     needs: update-readme
     permissions:
@@ -75,3 +64,21 @@ jobs:
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: true
+
+      - if: ${{ steps.cr.outputs.changed_charts }}
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - if: ${{ steps.cr.outputs.changed_charts }}
+        name: Push Charts to GHCR
+        run: |
+          for pkg in .cr-release-packages/*; do
+            if [ -z "${pkg:-}" ]; then
+              break
+            fi
+            helm push "${pkg}" oci://ghcr.io/${{ github.repository }}
+          done
